tests/fails/f44.t
if not require("fail") then return end

terra foo()
  ::a::
  ::a::
end
foo()
